# physic3d-engine

./: .gitignore  .gitlab-ci.yml  .gitmodules  Android.mk  CMakeLists.txt  CMakePresets.json  NIX_ENVIRONMENT.md  README.md  cmake_fwgs.cmake  flake.nix  shell.nix
.github/workflows/: android.yml  build.yml
android/: build.gradle  gradle.properties
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/launcher/: index.html
android/app/src/main/java/com/physic3d/android/: GameActivity.java  GameService.java  LauncherActivity.java
android/app/src/main/java/com/physic3d/fwgslib/: FWGSLib.java
android/app/src/main/res/drawable/: btn_secondary.xml  circle_icon_bg.xml  ic_folder.xml  layout_sel_background.xml  tab_unselected.xml  tui_border.xml
android/app/src/main/res/layout/: activity_launcher.xml  activity_shortcut.xml  notify_21.xml  row.xml
android/app/src/main/res/values/: dimens.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/main/res/values-ru/: strings.xml
android/jni/: Android.mk  Application.mk
engine/: Android.mk  CMakeLists.txt  eiface.h  fs_int.h  menu_int.h  sequence.h
engine/android/: .gitignore  settings.gradle
engine/android/app/: build.gradle
engine/android/app/src/main/: AndroidManifest.xml
engine/android/app/src/main/assets/launcher/: index.html
engine/android/app/src/main/java/com/physic3d/android/: EngineSurface.java  FPicker.java  GameActivity.java  GameInput.java  InstallReceiver.java  LauncherActivity.java  ShortcutActivity.java
engine/android/app/src/main/java/com/physic3d/fwgslib/: FWGSLib.java  PagedView.java
engine/android/app/src/main/res/drawable/: btn_primary.xml  card_bg.xml  dialog_bg.xml  input_bg.xml  tab_m3_background.xml  tab_selector.xml  tab_tui_background.xml
engine/android/app/src/main/res/layout/: about.xml  activity_fpicker.xml  notify.xml  notify_21.xml
engine/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
engine/android/app/src/main/res/values-night/: themes.xml
engine/client/: cl_cmds.c  cl_demo.cpp  cl_events.cpp  cl_frame.c  cl_game.c  cl_game.cpp  cl_main.c  cl_main.cpp  cl_menu.cpp  cl_mobile.cpp  cl_netgraph.cpp  cl_parse.c  cl_parse.cpp  cl_pmove.cpp  cl_remap.cpp  cl_tent.c  cl_tent.h  client.h  console.c  console.cpp  gl_backend.cpp  gl_decals.cpp  gl_export.h  gl_image.cpp  gl_local.h  gl_rmain.cpp  gl_rmisc.cpp  gl_rpart.cpp  gl_rstrobe.cpp  gl_rsurf.cpp  gl_sprite.c  gl_sprite.cpp  gl_studio.c  gl_studio.cpp  gl_vidnt.h  input.c  input.cpp  input.h  joyinput.cpp  joyinput.h  (+7 more)
engine/client/imagelib/: imagelib.h  img_bmp.c  img_bmp.cpp  img_dds.c  img_dds.cpp  img_main.c  img_quant.c  img_quant.cpp  img_utils.cpp  img_wad.c  img_wad.cpp
engine/client/vgui/: vgui_draw.cpp
engine/common/: avikit.c  avikit.cpp  base_cmd.cpp  cfgscript.cpp  cmd.c  cmd.cpp  common.c  common.cpp  common.h  con_utils.c  con_utils.cpp  crclib.cpp  crtlib.cpp  crtlib.h  crtlib_cpp.h  crtlib_inline.h  cvar.c  cvar.cpp  dedicated.cpp  filesystem.c  filesystem.cpp  host.c  host.cpp  hpak.c  hpak.cpp  identification.c  identification.cpp  infostring.c  infostring.cpp  launcher.cpp  library.c  library.cpp  library.h  masterlist.c  masterlist.cpp  mathlib.cpp  mathlib.h  mod_local.h  mod_studio.cpp  model.c  (+20 more)
engine/common/soundlib/: snd_main.cpp  snd_mp3.c  snd_mp3.cpp  snd_wav.c  snd_wav.cpp
engine/common/soundlib/libmpg/: dct36.cpp  dct64.cpp  frame.c  frame.cpp  index.c  index.cpp  layer3.cpp  libmpg.cpp  libmpg.h  mpg123.c  mpg123.cpp  mpg123.h  parse.cpp  reader.c  reader.cpp  synth.c  synth.cpp
engine/common/stb/: stb_sprintf.h
engine/game_launch/: CMakeLists.txt  game.rc  xash.c  xash.cpp
engine/jni/: Android.mk  Application.mk
engine/mainui/: Android.mk  BaseMenu.cpp  Btns.cpp  CMakeLists.txt  MenuStrings.cpp  Utils.cpp  Utils.h  exports.txt  udll_int.cpp  unicode_strtools.cpp  wscript
engine/mainui/controls/: Field.cpp  Field.h  PicButton.cpp  Switch.cpp  Table.cpp  Table.h
engine/mainui/menus/: Controls.cpp  Credits.cpp  LoadGame.cpp  ServerBrowser.cpp
engine/mainui/miniutl/: fmtstr.h  strtools.cpp  utlbuffer.cpp  utlbuffer.h  utlmemory.cpp  utlmemory.h  utlstring.cpp  utlstring.h  utlvector.h
engine/mainui/translations/: mainui_skeleton_stripped.txt
engine/platform/android/: android_fs.c  android_fs.cpp  android_nosdl.c  android_nosdl.cpp  dlsym-weak.h  snd_opensles.cpp  vid_android.cpp
engine/platform/posix/: crashhandler.cpp  crashhandler_libunwind.c
engine/platform/sdl/: events.c  events.cpp  events.h  gl_sdl.cpp  vid_sdl.cpp
engine/platform/win32/: con_win.cpp  crashhandler.c
engine/public/: defaults.h  port.h  render_api.h
engine/server/: server.h  sv_client.c  sv_client.cpp  sv_cmds.cpp  sv_custom.cpp  sv_filter.cpp  sv_game.c  sv_game.cpp  sv_main.c  sv_main.cpp  sv_phys.cpp  sv_pmove.cpp  sv_save.cpp
engine/vgui_support/: Android.mk  CMakeLists.txt
jni/: Android.mk  Application.mk
loader/: CMakeLists.txt
mainui/: CMakeLists.txt
mainui/miniutl/: fmtstr.h
mainui/translations/: mainui_skeleton_everything.txt  mainui_skeleton_nostringslst.txt
scripts/: package.py
vgui_support/: CMakeLists.txt
